# trashbot

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: docker.yml
src/: fun.rs  leaderboard.rs  main.rs  misc.rs  moderation.rs  mongo_connection_provider.rs  parental_control.rs  vcping.rs  vcping_setup.rs
src/models/: leaderboard.rs  leaderboard_channel.rs  mod.rs  vcping_settings.rs  voice_time.rs
