[package]
name = "trashbot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.27.2"
chrono = "0.4.39"
dotenv = "0.15.0"
mongodb = "3.2.1"
once_cell = "1.20.3"
poise = "0.6.1"
reqwest = { version = "0.12.12", features = [
    "http2",
    "charset",
    "rustls-tls",
    "json",
], default-features = false }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
